--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,20 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Pitch It</title>
-  <link rel="stylesheet" href="../static/css/navbar.css">
-  <link href="https://fonts.googleapis.com/css?family=Cantata+One|Philosopher&display=swap" rel="stylesheet">
-</head>
-<body>
-  <div class="wrapper">
-    <ul class="nav">
-      <img src="../static/dribbleidea.gif" alt="Idea" height="150px" width="150px">
-      <li><a href="#">HOME</a></li>
-      <li><a href="#">CATEGORIES</a></li>
-      <li><a href="#">Sign Up</a></li>
-    </ul>
-  </div>
-  
-</body>
-</html>
+<div class="navbar navbar-inverse" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">Pitch</a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="/">Home</a></li>
+
+
+              {% if current_user.is_authenticated %}
+                <li style="color:white;padding:15px;"><{{current_user.username}}</li>
+                <li><a href="{{url_for('main.profile',uname=current_user.username)}}">Profile</a></li>
+                <li><a href="{{url_for('auth.logout')}}">Log Out</a></li>
+              {% else %}
+                <li><a href="{{url_for('auth.login')}}">Log In</a></li>
+              {% endif %}
+
+            </ul>
+        </div>
+
+    </div>
+</div>
